force-app/main/default/objects/Order/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distribution Center</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>