force-app/main/default/objects/Order/fields/IntegrationLogInbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogInbound__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integration Log Inbound</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>OrdersInbound</relationshipName>
    <type>Lookup</type>
</CustomField>