force-app/main/default/objects/Order/fields/IntegrationLogOutbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogOutbound__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integration Log Outbound</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>OrdersOutbound</relationshipName>
    <type>Lookup</type>
</CustomField>