force-app/main/default/objects/Order/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>