force-app/main/default/objects/Order/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description
  >Average discount per product calculated from OrderItem.Discount__c. Field is maintained by Apex and should not be edited manually.</description>
    <inlineHelpText
  >Automatically calculated value based on the discounts of the order's items.</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>