force-app/main/default/objects/Order/validationRules/Block_Manual_Status_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Manual_Status_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    NOT(
        AND(
            LOWER(TEXT(PRIORVALUE(Status))) = &quot;new&quot;,
            LOWER(TEXT(Status)) = &quot;pending approval&quot;
        )
    ),
    NOT(
        AND(
            LOWER(TEXT(PRIORVALUE(Status))) = &quot;pending approval&quot;,
            LOWER(TEXT(Status)) = &quot;approved&quot;
        )
    ),
    NOT(
        AND(
            LOWER(TEXT(PRIORVALUE(Status))) = &quot;pending approval&quot;,
            LOWER(TEXT(Status)) = &quot;new&quot;
        )
    ),
    NOT(
        AND(
            LOWER(TEXT(PRIORVALUE(Status))) = &quot;approved&quot;,
            OR(
                LOWER(TEXT(Status)) = &quot;integrated&quot;,
                LOWER(TEXT(Status)) = &quot;integration error"
            )
        )
    )
)</errorConditionFormula>
    <errorMessage
  >You cannot manually change the status to this value. Please submit the request for approval.</errorMessage>
</ValidationRule>